# ResearchVerificationAgent

./: .env.example  AGENTS.md  README.md  main.py  pyproject.toml
.plan/: SPEC.md
src/agent/: __init__.py  config.py  graph.py  nodes.py  phase2_sanity.py  prompts.py  runner.py  sanity.py  schemas.py  state.py  tools.py
tests/: test_graph_smoke.py  test_routing.py
