[project]
name = "researchverificationagent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.1.3",
    "pydantic>=2",
    "pydantic-ai>=1.73.0",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.23",
]

[dependency-groups]
dev = [
    "pytest>=8",
]
